--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </section>
 
-    <script src="./dist/app.js"></script>
+    <script src="./dist/bundle.js"></script>
 </body>
 
 </html>
